--- a/styles/components/layout.css
+++ b/styles/components/layout.css
@@ -3,67 +3,43 @@
     height: fit-content;
     padding-top: 10px;
     padding-bottom:10px;
-    background-color: #3490DE;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    padding-left: 20px;
+    padding-right:20px;
+    background-color: #000;
+    color: #fff;
+    font-family: Helvetica;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    border-bottom: 1px solid #fff;
+}
+
+.header-navLinks {
+    font-size:16px;
+    text-shadow: 0.5px 0.5px #808080;
+}
+
+.header-navLinks:hover {
+    border-bottom: 1px solid white;
+    cursor: pointer;
+}
+
+
+.footer {
+    position:fixed;
+    bottom:0%;
+    width:100%;
+    height: fit-content;
+    padding-top: 10px;
+    padding-bottom:10px;
+    padding-left: 20px;
+    padding-right:20px;
+    background-color: #000;
+    color: #fff;
+    font-family: Helvetica;
+    display: flex;
     justify-content:center;
     align-items: center;
-}
-
-.header-left{
-    justify-content: center;
-    align-items: center;
-}
-
-.header-left-image {
-    border-radius: 10px;
-    padding-left: 5px;
-}
-
-.header-center {
-    display:grid;
-    grid-template-columns: 2fr 1fr;
-}
-
-.header-center-search {
-    border-radius:5px;
-    width: 90%;
-    margin:auto;
-    height: 30px;
-    align-items: center;
-    display: flex;
-    padding-left: 5px;
-}
-
-.header-center-number {
-    color:white;
-    font-family: Roboto;
-    font-size:15px
-}
-
-.header-right {
-    display:flex;
-    width:100%;
-}
-
-.header-right-icon {
-    display:block;
-    align-items: center;
-    justify-content: center;
-    margin-right:5px;
-    margin-left:5px;
-}
-.header-right-icon-svg {
-    height:30px;
-    width:30px;
-    color: white;
-    display:flex;
-    justify-content: center;
-}
-
-.header-right-icon-text{
-    color:white;
-    font-family: Roboto;
-    font-size:15px;
-    text-align:left;
+    border-top:1px solid #fff;
+    
 }
